# tauri-plugin-mobile-sharetarget

./: Cargo.toml  README.md  build.rs  package.json
android/: build.gradle.kts
android/src/main/java/: Example.kt  ExamplePlugin.kt  Sharetarget.kt  SharetargetPlugin.kt
examples/tauri-app/: package.json  pnpm-lock.yaml
examples/tauri-app/src/: App.svelte
examples/tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
examples/tauri-app/src-tauri/capabilities/: default.json
examples/tauri-app/src-tauri/src/: lib.rs
guest-js/: index.ts
ios/Sources/: ExamplePlugin.swift
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: get_latest_intent.toml  get_latest_intent_and_extract_text.toml
permissions/schemas/: schema.json
src/: commands.rs  desktop.rs  intents.rs  lib.rs  mobile.rs
