[package]
name = "tauri-plugin-mobile-sharetarget"
version = "2.0.0"
authors = [ "IT-ess" ]
description = "A mobile only Tauri plugin to handle Share Intents / Share extensions on Android & iOS"
edition = "2021"
rust-version = "1.77.2"
keywords = ["tauri", "plugin", "share", "intent", "target", "extension"]
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-mobile-sharetarget"
readme = "README.md"
license = "MIT"
repository = "https://github.com/IT-ess/tauri-plugin-mobile-sharetarget"

[dependencies]
tauri = { version = "2.9.5" }
serde = "1.0"
thiserror = "2"
crossbeam-queue = "0.3.12"
serde_json = "1.0.145"
anyhow = "1.0.100"

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21.1"

[build-dependencies]
tauri-plugin = { version = "2.5.2", features = ["build"] }
